<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/write_text"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textview_border"
        android:hint="Type what you want to be translated!"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/language_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/write_text"
        app:layout_constraintTop_toBottomOf="@id/write_text" />

    <Button
        android:id="@+id/switchTwo_button"
        android:layout_width="110dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/speech_version"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@id/write_text"
        app:layout_constraintTop_toBottomOf="@id/write_text"
        tools:ignore="SmallSp" />

    <Space
        android:id="@+id/space_between"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="49dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchTwo_button" />

    <TextView
        android:id="@+id/output_text"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textview_border"
        android:padding="10dp"
        android:text="@string/output_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space_between" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="77dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/home"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/output_text" />

    <Spinner
        android:id="@+id/language_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/output_text"
        app:layout_constraintTop_toBottomOf="@id/output_text" />

    <Button
        android:id="@+id/translate_button2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal"
        android:text="@string/translate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language_options" />

    <Button
        android:id="@+id/speak_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/speak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/translate_button2" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speak_button" />


</androidx.constraintlayout.widget.ConstraintLayout>
