<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="clip_horizontal|center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/title_string"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/space_between"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="49dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <Button
        android:id="@+id/speech_version"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:gravity="center_horizontal"
        android:text="@string/speech_version2"
        app:layout_constraintStart_toStartOf="@id/space_between"
        app:layout_constraintTop_toBottomOf="@id/space_between" />

    <Space
        android:id="@+id/space_between2"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="49dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speech_version" />

    <Button
        android:id="@+id/text_version"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:text="@string/text_version"
        app:layout_constraintStart_toStartOf="@id/space_between2"
        app:layout_constraintTop_toBottomOf="@id/space_between2" />


</androidx.constraintlayout.widget.ConstraintLayout>